Closed
Bug 213894
Opened 22 years ago
Closed 22 years ago
XPI Installation crashes [@ nsXPITriggerItem::SetPrincipal]
Categories
(Core Graveyard :: Installer: XPInstall Engine, defect)
Core Graveyard
Installer: XPInstall Engine
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
References
()
Details
(Keywords: crash, smoketest)
Crash Data
Attachments
(1 file)
|
452 bytes,
patch
|
caillon
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
Stack Signature nsXPITriggerItem::SetPrincipal 4e3b57e0
Email Address fsu2usn99@att.net
Product ID MozillaTrunk
Build ID 2003072404
Trigger Time 2003-07-25 10:46:05
Platform Win32
Operating System Windows 98 4.10 build 67766222
Module XPINSTAL.DLL
URL visited http://nexgenmedia.net/google.xpi
User Comments Per request in #mozillazine, visited above site... crash
immediately followed
Trigger Reason Access violation
Source File Name
c:/builds/seamonkey/mozilla/xpinstall/src/nsXPITriggerInfo.cpp
Trigger Line No. 98
Stack Trace
nsXPITriggerItem::SetPrincipal [c:/build
nsXPITriggerItem::SetPrincipal
[c:/builds/seamonkey/mozilla/xpinstall/src/nsXPITriggerInfo.cpp, line 98]
nsXPInstallManager::OnCertAvailable
[c:/builds/seamonkey/mozilla/xpinstall/src/nsXPInstallManager.cpp, line 1040]
CertReader::OnStopRequest
[c:/builds/seamonkey/mozilla/xpinstall/src/CertReader.cpp, line 260]
nsStreamListenerTee::OnStopRequest
[c:/builds/seamonkey/mozilla/netwerk/base/src/nsStreamListenerTee.cpp, line 66]
nsHttpChannel::OnStopRequest
[c:/builds/seamonkey/mozilla/netwerk/protocol/http/src/nsHttpChannel.cpp, line 3252]
nsXPITriggerItem::SetPrincipal(nsXPITriggerItem * const 0x02654a04, nsIPrincipal
* 0x00000000) line 98
nsXPInstallManager::OnCertAvailable(nsXPInstallManager * const 0x02d23ca0,
nsIURI * 0x02599648, nsISupports * 0x00000000, unsigned int 2152398850,
nsIPrincipal * 0x00000000) line 1040
Attachment #128507 -
Flags: superreview?(bzbarsky)
Attachment #128507 -
Flags: review?(caillon)
Comment 2•22 years ago
|
||
naughty intern.
Updated•22 years ago
|
Attachment #128507 -
Flags: superreview?(bzbarsky) → superreview+
Updated•22 years ago
|
Attachment #128507 -
Flags: review?(caillon) → review+
Comment 3•22 years ago
|
||
*** Bug 213721 has been marked as a duplicate of this bug. ***
Comment 4•22 years ago
|
||
OS/platform All-All based on the many dups attached to bug 213721.
OS: Windows ME → All
Hardware: PC → All
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 6•22 years ago
|
||
*** Bug 213978 has been marked as a duplicate of this bug. ***
Updated•14 years ago
|
Crash Signature: [@ nsXPITriggerItem::SetPrincipal]
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•