Bug 213894 XPI Installation crashes [@ nsXPITriggerItem::SetPrincipal] r=caillon sr=bz